20080512
	* $gtkvncviewer <server> automatically connects to server
	* Removed deprecated Encoding key in .desktop file

20080506
	* Added License file

20080412
	* Added fullscreen capability

20080411
	* Packaged mo files

20080408
	* Added internationalization support

20080407
	* Added launchpad integration, cleaned up connect dialog layout

20080322
	* Fixed bug #205257

??????????
	* First release.