@@ -1,4 +1,4 @@
-gtkvncviewer (0.2.4-0ubuntu1~ppa1) hardy; urgency=low
+gtkvncviewer (0.3-0ubuntu1~ppa1) hardy; urgency=low
 
   * New upstream release.
 
