@@ -567,6 +567,6 @@ double-click away. Servers are shown in an icon view."""
     print "Generating..."
 
     #debian
-    version="0.2.4"
+    version="0.3"
     p.generate(version, changelog, rpm=False, src=True, debrev="0ubuntu1~ppa1")
 
